gcc/testsuite/algol68/compile/error-radix-4.a68
(bits d = 16rfg; skip) { dg-error "" }
